# usb-facade

./: .gitignore  CMakeLists.txt  README.md  common.hh
.github/workflows/: release.yml
cmake/: install.cmake
examples/ahk/: macro_keyboard.ahk  mouse_scroller.ahk
examples/ahk/common/: common.ahk
src/: ahk_api.cc  common.cc  common.hh  macros.hh  main.cc  version.hh.in
